tests/ui/tests/unrecognized-intrinsic-bindings.stderr
error[E061]: `I-Definitely-Do-Not-Exist` is not an intrinsic type
 --> ${DIRECTORY}/unrecognized-intrinsic-bindings.lushui:3:1
  |
3 | @intrinsic
  | ---------- 
  |
 --> ${DIRECTORY}/unrecognized-intrinsic-bindings.lushui:4:6
  |
4 | data I-Definitely-Do-Not-Exist: Type
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |

error[E061]: `i-definitely-do-not-exist` is not an intrinsic function
 --> ${DIRECTORY}/unrecognized-intrinsic-bindings.lushui:6:1
  |
6 | @intrinsic
  | ---------- 
  |
 --> ${DIRECTORY}/unrecognized-intrinsic-bindings.lushui:7:1
  |
7 | i-definitely-do-not-exist: I-Definitely-Do-Not-Exist
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |

error: aborting due to 2 previous errors
 note: the error E061 has a detailed explanation
 help: run `lushui explain E061` to view it

