tests/ui/tests/unrecognized-intrinsic-bindings.lushui
;;; TEST fail check -Z internals

@intrinsic
data I-Definitely-Do-Not-Exist: Type

@intrinsic
i-definitely-do-not-exist: I-Definitely-Do-Not-Exist
